@@ -13,7 +13,7 @@
 void tp_compiler(TP);
 #include "vm.c"
 
-tp_obj None = {TP_NONE};
+tp_obj tp_None = {TP_NONE};
 
 #if TP_COMPILER
 #include "bc.c"
@@ -22,7 +22,7 @@ void tp_compiler(TP) {
     tp_import(tp,0,"parse",tp_parse);
     tp_import(tp,0,"encode",tp_encode);
     tp_import(tp,0,"py2bc",tp_py2bc);
-    tp_call(tp,"py2bc","_init",None);
+    tp_call(tp,"py2bc","_init",tp_None);
 }
 #else
 void tp_compiler(TP) { }
