@@ -4,7 +4,7 @@
 int main(int argc, char *argv[]) {
     tp_vm *tp = tp_init(argc,argv);
     /* INIT */
-    tp_call(tp,"py2bc","tinypy",None);
+    tp_call(tp,"py2bc","tinypy",tp_None);
     tp_deinit(tp);
     return(0);
 }
