@@ -16,3 +16,4 @@
 * cleaned up encode.py so that registers are no longer leaked
     added assert after each frame to check that this is the case
 * applied patch by KK to improve tinypy/tests.py feedback
+* applied patch by allenfant to finish namespacing tinypy
